# ioc_trait_demo

./: Cargo.toml  app.toml
crates/a/: Cargo.toml
crates/a/src/: lib.rs
crates/b/: Cargo.toml
crates/b/src/: lib.rs
crates/cmd/: Cargo.toml
crates/cmd/src/: main.rs
crates/mvc/: Cargo.toml
examples/a/: Cargo.toml
examples/a/src/: lib.rs
examples/b/: Cargo.toml
examples/b/src/: lib.rs
examples/cmd/: Cargo.toml
examples/cmd/src/: main.rs
examples/traits/: Cargo.toml
examples/traits/src/: main.rs
libs/ioc/: Cargo.toml
libs/ioc/src/: lib.rs
libs/ioc_core/: Cargo.toml
libs/ioc_core/src/: config.rs  error.rs  init.rs  lib.rs  life.rs  place.rs
libs/ioc_core_macro/: Cargo.toml
libs/ioc_macros/: Cargo.toml
libs/ioc_macros/src/: bean.rs  bind.rs  lib.rs
libs/ioc_macros/src/bean/: alias.rs  config.rs  field.rs  mod.rs
