[workspace]
members = [
    "crates/*",
    "libs/*",
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
ioc = { path = "libs/ioc" }
ioc_core = { path = "libs/ioc_core" }
ioc_macros = { path = "libs/ioc_macros" }

linkme = "0.3"
thiserror = "2"
anyhow = "1"
proc-macro2 = "1"
quote = "1"
darling = { version = "0.21" }
cfg-rs = "0.6"

[workspace.dependencies.syn]
version = "2"
features = [
    "extra-traits",
    "derive",
    "parsing",
    "printing",
    "clone-impls",
    "proc-macro",
]