[package]
name = "ioc_macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
darling = { workspace = true }
proc-macro-crate = "3.4.0"
prettyplease = "0.2.37"


